--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <link rel="icon" type="image/png" sizes="16x16" href="favicons/favicon-16x16.png">
         <!-- Add a link to your properly named CSS file here -->
         <link href="WALKER.styles.css" rel="stylesheet">
+        <link href="https://res.cloudinary.com/dr6lvwubh/raw/upload/v1581441981/Anicons/anicons-regular.css" rel="stylesheet">
     </head>
     <body>
         <header>
